--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cdowdy/WebFontLoader",
+    "name": "cdowdy/webfontloader",
     "description": "A Bolt Extension To Use TypeKit's WebFont Loader in Your Templates.",
     "type": "bolt-extension",
     "keywords": ["font loader", "Google Fonts", "TypeKit Font Loader"],
@@ -18,7 +18,7 @@
             "init.php"
         ],
         "psr-4": {
-            "Bolt\\Extension\\cdowdy\\WebFontLoader\\": ""
+            "Bolt\\Extension\\cdowdy\\webfontloader\\": ""
         }
     },
     
